--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,25 +9,20 @@
 @include mat.core();
 
 // Light theme
-$light-primary: mat.define-palette(mat.$indigo-palette, 500);
-$light-accent:  mat.define-palette(mat.$pink-palette, A200, A100, A400);
 $light-theme:   mat.define-light-theme((
-        color: (
-          primary: $light-primary,
-          accent: $light-accent,
-        )
+  color: (
+    primary: mat.define-palette(mat.$indigo-palette, 500),
+    accent: mat.define-palette(mat.$pink-palette, A200, A100, A400),
+  )
 ));
 
 // Dark theme
-$dark-primary: mat.define-palette(mat.$blue-grey-palette);
-$dark-accent:  mat.define-palette(mat.$amber-palette, A200, A100, A400);
-$dark-warn:    mat.define-palette(mat.$deep-orange-palette);
-$dark-theme:   mat.define-light-theme((
-        color: (
-                primary: $dark-primary,
-                accent: $dark-accent,
-                warn: $dark-warn
-        )
+$dark-theme:   mat.define-dark-theme((
+  color: (
+    primary: mat.define-palette(mat.$blue-grey-palette),
+    accent: mat.define-palette(mat.$amber-palette, A200, A100, A400),
+    warn: mat.define-palette(mat.$deep-orange-palette),
+  )
 ));
 
 @media (prefers-color-scheme: light) {
@@ -37,7 +32,6 @@ $dark-theme:   mat.define-light-theme((
 @media (prefers-color-scheme: dark) {
   @include mat.all-component-themes($dark-theme);
 }
-
 
 //
 // If you want to add something do it here
